# lte_4_click

./: CMakeLists.txt  Kconfig  README.rst  log21,09.txt  log25,09.txt  mikroe.overlay  prj.conf  sample.yaml  serialRead.py
app/lte/: lte.c  lte.h
app/main/: main.c
app/mqtt/: mqtt.c  mqtt.h
boards/arm/nrf9160_ns/: Kconfig.board  Kconfig.defconfig  board.cmake  nrf9160_ns-pinctrl.dtsi  nrf9160_ns.dts  nrf9160_ns.yaml  nrf9160_ns_defconfig
